--- a/WebL2/index.html
+++ b/WebL2/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <title>Gas</title>  
+    <title>Gas</title>
+    <link rel="stylesheet" href="Styles.css">  
 </head>
 <body>
-    
+
 </body>
