--- a/WebL2/index.html
+++ b/WebL2/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
     <title>Gas</title>
-    <link rel="stylesheet" href="Styles.css">  
+    <link rel="stylesheet" href="Styles.css">
+      
 </head>
 <body>
-
+    <nav></nav>
 </body>
