Made links better. Grid inside nav.

--- a/WebL2/index.html
+++ b/WebL2/index.html
@@ -5,5 +5,10 @@
       
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <img width="400px" src="Images/Logo.png">
+        <a href="index.html">Home</a>
+        <a href="index.html">Store</a>
+        <a href="index.html">About</a>
+    </nav>
 </body>
