added images and boxes lmao

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 <body>
     <nav>
         <img width="400px" src="Images/Logo.png">
-        <a href="index.html">Home</a><br>
-        <a href="index.html">Store</a><br>
+        <a href="index.html">Home</a>
+        <a href="index.html">Store</a>
         <a href="index.html">About</a>
     </nav>
+    <img class="promo1" src="Images/promo1.png">
+    <img class="promo2" src="Images/promo2.png">
+    <img class="promo3" src="Images/promo3.png">
+    
 </body>
