--- a/WebL2/index.html
+++ b/WebL2/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
+
 <head>
     <title>Gas</title>
     <link rel="stylesheet" href="Styles.css">
-      
 </head>
+
 <body>
     <nav>
-        <img width="400px" src="Images/Logo.png">
+        <img src="Images/Logo.png">
         <a href="index.html">Home</a>
-        <a href="index.html">Store</a>
+        <a href="shop.html">Store</a>
         <a href="index.html">About</a>
     </nav>
+    <p class="box">gas is the coolest gamer drink ever!</p>
+    <img class="promo1" src="Images/promo1.png">
+    <img class="promo2" src="Images/promo2.png">
+    <img class="promo3" src="Images/promo3.png">
+
+
 </body>
