--- a/WebL2/shop.html
+++ b/WebL2/shop.html
@@ -4,6 +4,19 @@
     <title>Gas</title>
     <link rel="stylesheet" href="Styles.css">
 </head>
+<script>
+    var products = ["/Images/gasjar.png",
+        "/Images/gascan.png",
+        "/Images/gasbottle.png"
+    ];
+    var index = 0;
+</script>
+
 <body>
-    
+    <nav>
+        <img src="Images/Logo.png">
+        <a href="index.html">Home</a>
+        <a href="shop.html">Store</a>
+        <a href="index.html">About</a>
+    </nav>
 </body>
