--- a/WebL2/shop.html
+++ b/WebL2/shop.html
@@ -19,4 +19,7 @@
         <a href="shop.html">Store</a>
         <a href="index.html">About</a>
     </nav>
+    <div class="productbox" >
+
+    </div>
 </body>
