--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src="Images/Logo.png">
         <a href="index.html">Home</a>
         <a href="shop.html">Store</a>
-        <a href="index.html">About</a>
+        <a href="about.html">About</a>
     </nav>
     <p class="box">gas is the coolest gamer drink ever!</p>
     <img class="promo1" src="Images/promo1.png">
