--- a/shop.html
+++ b/shop.html
@@ -33,7 +33,7 @@
     <img src="Images/Logo.png">
     <a href="index.html">Home</a>
     <a href="shop.html">Store</a>
-    <a href="index.html">About</a>
+    <a href="about.html">About</a>
   </nav>
       <ul class="slide">
         <li>
