--- a/shop.html
+++ b/shop.html
@@ -30,7 +30,7 @@
 
 <body>
   <nav>
-    <img src="Images/Logo.png">
+    <img alt="logo" src="Images/Logo.png">
     <a href="index.html">Home</a>
     <a href="shop.html">Store</a>
     <a href="about.html">About</a>
@@ -38,7 +38,7 @@
   <ul class="slide">
     <li>
       <h1 id="title">Gas Bottle</h1>
-      <img id="img" src="Images/gasbottle.png">
+      <img id="img" alt="product" src="Images/gasbottle.png">
       <p id="price">$30.00</p>
     </li>
   </ul>
