--- a/about.html
+++ b/about.html
@@ -7,11 +7,18 @@
 
 <body>
     <nav>
-        <img src="Images/Logo.png">
+        <img src="Images/Logo.png" alt="Logo">
         <a href="index.html">Home</a>
         <a href="shop.html">Store</a>
         <a href="about.html">About</a>
     </nav>
-
-
+    <section>
+        <p class="textbox">
+            At Gas we wanted to provide lots of sugar for our customers to drink. The sugar in our drinks have been
+            proven by our own specialists to improve your gaming skill by up to 700%. <br><br>
+            Email: support@gas.nz<br>
+            Phone: 022 398 5487<br>
+            Office address: 18 dyson street, invercargill
+        </p>
+    </section>
 </body>
