--- a/shop.html
+++ b/shop.html
@@ -4,11 +4,16 @@
   <title>Gas</title>
   <link rel="stylesheet" href="Styles.css">
   <script>
+    //slideshow images
     var imgs = ['Images/gasbottle.png', 'Images/gasjar.png', 'Images/gascan.png'];
+    //slideshow titles
     var titles = ['Gas Bottle', 'Gas Jar', 'Gas Can'];
+    //slideshow prices
     var prices = ['$30.00', '$20.00', '$10.00'];
+    //slideshow number
     var slideNum = 0;
 
+    //function changes image title and price
     function imgChange() {
       var imgLoc = document.getElementById('img')
 
@@ -23,23 +28,24 @@
       document.getElementById('title').innerHTML = titles[slideNum];
       document.getElementById('price').innerHTML = prices[slideNum];
     }
-
-    setInterval(imgChange, 2000);
   </script>
 </head>
 
 <body>
-  <nav>
-    <img alt="logo" src="Images/Logo.png">
-    <a href="index.html">Home</a>
-    <a href="shop.html">Store</a>
-    <a href="about.html">About</a>
-  </nav>
-  <ul class="slide">
-    <li>
-      <h1 id="title">Gas Bottle</h1>
-      <img id="img" alt="product" src="Images/gasbottle.png">
-      <p id="price">$30.00</p>
-    </li>
-  </ul>
+  <section>
+    <nav>
+      <img alt="logo" src="Images/Logo.png">
+      <a href="index.html">Home</a>
+      <a href="shop.html">Store</a>
+      <a href="about.html">About</a>
+    </nav>
+    <ul class="slide">
+      <li>
+        <h1 id="title">Gas Bottle</h1>
+        <img id="img" alt="product" src="Images/gasbottle.png">
+        <p id="price">$30.00</p>
+        <button onclick="imgChange()">Next Product</button>
+      </li>
+    </ul>
+  </section>
 </body>
